Issue with card deck not showing when empty.
Fixed typo issue which caused CSS not to apply when deck is empty and there are no cards remaining. Changed bg to white.

--- a/card-deck/src/components/Deck.css
+++ b/card-deck/src/components/Deck.css
@@ -31,7 +31,7 @@
 .empty-deck {
   width: 8.75vw;
   height: 24vh;
-  background: linear-gradient(45deg, #2197f3, #1976d2);
+  background: white;
   border: 0.125rem solid #333;
   border-radius: 0.625rem;
   display: flex;
